# apple-hdr-heic

./: .gitattributes  .gitignore  LICENSE  README.md  noxfile.py  pyproject.toml  requirements.txt
.github/actions/prepare-deps/: action.yml
.github/workflows/: python-package.yml  release.yml  tests-builds.yml
src/apple_hdr_heic/: __init__.py  decoder.py  lib.py  metadata.py
tests/: test_decoder.py  test_lib.py
tests/data/: hdr-sample.heic
